
brightthemedir = $(datadir)/themes/Bright/xfce-notify-4.0
dist_brighttheme_DATA = gtk-3.20/Bright/gtk.css

defaultthemedir = $(datadir)/themes/Default/xfce-notify-4.0
dist_defaulttheme_DATA = gtk-3.20/Default/gtk.css

retrothemedir = $(datadir)/themes/Retro/xfce-notify-4.0
dist_retrotheme_DATA = gtk-3.20/Retro/gtk.css

smokethemedir = $(datadir)/themes/Smoke/xfce-notify-4.0
dist_smoketheme_DATA = gtk-3.20/Smoke/gtk.css

zomgponiesthemedir = $(datadir)/themes/ZOMG-PONIES!/xfce-notify-4.0
dist_zomgponiestheme_DATA = gtk-3.20/ZOMG-PONIES!/gtk.css

dist_noinst_DATA = \
	gtk-3.20/Bright/gtk.css \
	gtk-3.20/Default/gtk.css \
	gtk-3.20/Retro/gtk.css \
	gtk-3.20/Smoke/gtk.css \
	gtk-3.20/ZOMG-PONIES!/gtk.css
