
brightthemedir = $(datadir)/themes/Bright/xfce-notify-4.0
dist_brighttheme_DATA = gtk-3.20/Bright/gtk.css

defaultthemedir = $(datadir)/themes/Default/xfce-notify-4.0
dist_defaulttheme_DATA = gtk-3.20/Default/gtk.css

retrothemedir = $(datadir)/themes/Retro/xfce-notify-4.0
dist_retrotheme_DATA = gtk-3.20/Retro/gtk.css

smokethemedir = $(datadir)/themes/Smoke/xfce-notify-4.0
dist_smoketheme_DATA = gtk-3.20/Smoke/gtk.css

xpballoonthemedir = $(datadir)/themes/XP-Balloon/xfce-notify-4.0
dist_xpballoontheme_DATA = \
	gtk-3.20/XP-Balloon/xfce4-notify-4.0/gtk.css \
	gtk-3.20/XP-Balloon/xfce4-notify-4.0/msgbox-bottom-left.png \
	gtk-3.20/XP-Balloon/xfce4-notify-4.0/msgbox-bottom-right.png \
	gtk-3.20/XP-Balloon/xfce4-notify-4.0/msgbox-top-left.png \
	gtk-3.20/XP-Balloon/xfce4-notify-4.0/msgbox-top-right.png

zomgponiesthemedir = $(datadir)/themes/ZOMG-PONIES!/xfce-notify-4.0
dist_zomgponiestheme_DATA = gtk-3.20/ZOMG-PONIES!/gtk.css

dist_noinst_DATA = \
	$(dist_brighttheme_DATA) \
	$(dist_defaulttheme_DATA) \
	$(dist_retrotheme_DATA) \
	$(dist_smoketheme_DATA) \
	$(dist_xpballoonthemedir_DATA) \
	$(dist_zomgponiestheme_DATA)
