iconsdir = $(datadir)/icons/hicolor/scalable/status
icons_DATA =								\
	notification-disabled-symbolic.svg		\
	notification-disabled-new-symbolic.svg	\
	notification-new-symbolic.svg			\
	notification-symbolic.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
