# These should really go in symbolic/status, but unfortunately the hicolor
# index.theme doesn't include that directory, so we have to put them in
# scalable/status instead.
iconsdir = $(datadir)/icons/hicolor/scalable/status
icons_DATA =								\
	notification-disabled-symbolic.svg		\
	notification-symbolic.svg				\
	org.xfce.notification.unread-emblem-symbolic.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
